[TP-19] Fixed corrupted .csproj

--- a/TrainingPortal/TrainingPortal.Service/Web.config
+++ b/TrainingPortal/TrainingPortal.Service/Web.config
@@ -8,8 +8,51 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
-  
+
   <system.serviceModel>
+    <!--<bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IUserService"/>
+      </basicHttpBinding>
+    </bindings>
+    <services>
+      <service name="TrainingPortal.Service.UserService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.IUserService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.CategoryService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ICategoryService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.AudienceService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.IAudienceService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.CertificateService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ICertificateService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.LessonService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ILessonService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.RoleService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.IRoleService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.TestOptionService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ITestOptionService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.TestService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.ITestService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+      <service name="TrainingPortal.Service.UserRoleService">
+        <endpoint address="" binding="basicHttpBinding" contract="TrainingPortal.Service.IUserRoleService"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
+    </services>-->
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -27,9 +70,9 @@
   </system.serviceModel>
 
   <connectionStrings>
-    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal1" />
+    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=DESKTOP-Q5KSPMB\SQLEXPRESS;Database=TrainingPortal;User Id=admin;Password=1234567q" />
   </connectionStrings>
-  
+
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
     <!--
