--- a/TrainingPortal/TrainingPortal.Web/Web.config
+++ b/TrainingPortal/TrainingPortal.Web/Web.config
@@ -26,38 +26,22 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:51750/CategoryService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICategoryService"
-        contract="CategoryService.ICategoryService" name="BasicHttpBinding_ICategoryService" />
-      <endpoint address="http://localhost:51750/UserService.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IUserService" contract="UserService.IUserService"
-        name="BasicHttpBinding_IUserService" />
-      <endpoint address="http://localhost:51750/CourseService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICourseService"
-        contract="CourseService.ICourseService" name="BasicHttpBinding_ICourseService" />
-      <endpoint address="http://localhost:51750/RoleService.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_IRoleService" contract="RoleService.IRoleService"
-        name="BasicHttpBinding_IRoleService" />
-      <endpoint address="http://localhost:51750/UserRoleService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserRoleService"
-        contract="UserRoleService.IUserRoleService" name="BasicHttpBinding_IUserRoleService" />
-      <endpoint address="http://localhost:51750/LessonService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILessonService"
-        contract="LessonService.ILessonService" name="BasicHttpBinding_ILessonService" />
-      <endpoint address="http://localhost:51750/TestService.svc" binding="basicHttpBinding"
-        bindingConfiguration="BasicHttpBinding_ITestService" contract="TestService.ITestService"
-        name="BasicHttpBinding_ITestService" />
-      <endpoint address="http://localhost:51750/TestOptionService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITestOptionService"
-        contract="TestOptionService.ITestOptionService" name="BasicHttpBinding_ITestOptionService" />
-      <endpoint address="http://localhost:51750/CertificateService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICertificateService"
-        contract="CertificateService.ICertificateService" name="BasicHttpBinding_ICertificateService" />
-      <endpoint address="http://localhost:51750/AudienceService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAudienceService"
-        contract="AudienceService.IAudienceService" name="BasicHttpBinding_IAudienceService" />
+      <endpoint address="http://localhost:51750/CategoryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICategoryService" contract="CategoryService.ICategoryService" name="BasicHttpBinding_ICategoryService" />
+      <endpoint address="http://localhost:51750/UserService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserService" contract="UserService.IUserService" name="BasicHttpBinding_IUserService" />
+      <endpoint address="http://localhost:51750/CourseService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICourseService" contract="CourseService.ICourseService" name="BasicHttpBinding_ICourseService" />
+      <endpoint address="http://localhost:51750/RoleService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRoleService" contract="RoleService.IRoleService" name="BasicHttpBinding_IRoleService" />
+      <endpoint address="http://localhost:51750/UserRoleService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IUserRoleService" contract="UserRoleService.IUserRoleService" name="BasicHttpBinding_IUserRoleService" />
+      <endpoint address="http://localhost:51750/LessonService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILessonService" contract="LessonService.ILessonService" name="BasicHttpBinding_ILessonService" />
+      <endpoint address="http://localhost:51750/TestService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITestService" contract="TestService.ITestService" name="BasicHttpBinding_ITestService" />
+      <endpoint address="http://localhost:51750/TestOptionService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITestOptionService" contract="TestOptionService.ITestOptionService" name="BasicHttpBinding_ITestOptionService" />
+      <endpoint address="http://localhost:51750/CertificateService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ICertificateService" contract="CertificateService.ICertificateService" name="BasicHttpBinding_ICertificateService" />
+      <endpoint address="http://localhost:51750/AudienceService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAudienceService" contract="AudienceService.IAudienceService" name="BasicHttpBinding_IAudienceService" />
     </client>
   </system.serviceModel>
+
+  <!--<connectionStrings>
+    <add name="Local" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\ProjectsV13;Database=TrainingPortal1;User Id=admin;Password=1234567q" />
+  </connectionStrings>-->
 
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -93,8 +77,8 @@
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
 </configuration>
